fix(Todo): fix hoverable buttons, fix overflows rules

--- a/assets/main.css
+++ b/assets/main.css
@@ -16,8 +16,9 @@
   background: none;
 }
 
-* {
+html {
   overflow: hidden !important;
+  height: 100vh;
 }
 
 [contenteditable]:empty:after {
